2018-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr85529-2.c:
	  Disable a test for older GCC.
	* support/regression/tests/new_wide.c:
	  Disable a test for host.

2018-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCloop.c:
	  Fix bug #2794.

2018-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr85529-1.c:
	  Disable a test for older GCC.

2018-08-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve error message on unbalanced stack.
	* support/regression/tests/bug-2793.c:
	  Test for bug #2793.

2018-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Fix an issue introduced in the bugfix for #2665.
	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Minor improvements in STM8 peephole optimization.
	* src/stm8/gen.c:
	  Minor improvement in STM8 subtraction codegen.

2018-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-va-arg-5.c:
	  Disable a test for older GCC.
	* support/regression/ports/uc*/spec.mk:
	  Harmonize simulation timeouts for z80-related.
	* src/SDCCsymt.c,
	  src/SDCCdwarf2.c,
	  src/z80/main.c,
	  src/ds390/main.c,
	  device/lib/_rrulonglong.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rlslonglong.c:
	  Fix bug #2665.

2018-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  support/regression/tests/compare.c:
	  Improve range checks on 8- and 16-bit variables.
	* support/regression/tests/gcc-torture-execute-vrp-7.c:
	  Disable test which fails for z80-related for tlcs90, also.

2018-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c:
	  Improve shift of global variables by 1.

2018-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCval.c,
	  support/regression/tests/gcc-torture-execute-wchar_t-1.c,
	  Fix bug #2792.

2018-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c,