@@ -13,11 +13,9 @@ f (long long x)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_mcs51 // Bug #2778
 #ifndef __SDCC_ds390 // Bug #2777
-  if (f (10000000000LL) != 1 || f (100000000000LL) != 10)
-    ASSERT (0);
+  ASSERT (f (10000000000LL) == 1);
+  ASSERT (f (100000000000LL) == 10);
   return;
-#endif
 #endif
 }
